Fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,6 @@ html, body {
     background-attachment: fixed;
     background-position: center;
     overflow-x: hidden;
-    overflow-y: auto;
-    min-height: 100vh;
 }
 
 .hidden {
@@ -116,15 +114,16 @@ nav {
     position: relative;
     text-align: center;
     padding: 50px;
-    padding: 0;
     z-index: 1;
 }
 
 .home::before {
     content: "";
-    position: absolute;
+    position: relative;
+    border-radius: 20px;
     top: 0;
     width: 100%;
+    padding: 100px;
     min-height: 870px; /* Covers 70% of the section */
     background: rgba(156, 113, 56, 0.2); /* Black with 70% opacity */
     z-index: -1; /* Ensures it stays behind content */
@@ -187,7 +186,7 @@ nav {
 
 .scroll-arrow {
     position: absolute;
-    bottom: 0px;
+    bottom: 100px;
     color: black;
     transition: opacity 0.5s ease;
 }
@@ -276,10 +275,6 @@ nav {
     transform: translateX(5px);
 }
 
-.section {
-    width: 100%;
-    box-sizing: border-box;
-}
 
 /*SOKNADSKRITERIER*/
 .soknadskriterier {
@@ -287,11 +282,9 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 100px 20px;
+    padding: 100px 0;
     text-align: center;
     position: relative;
-    padding-top: 20px;
-    padding-bottom: 20px;
 }
 .soknadskriterier h2 {
     font-size: 3.5rem;
